--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
-<!--[if lt IE 8 ]><html class="no-js ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="no-js ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 8)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <head>
+	 <!---  OG Graph
+	 ================================================== -->
+	 <meta property="og:locale" content="pt_br">
+	 <meta property="og:url" content="https://lucasbighi.github.io/">
+	 <meta property="og:title" content="Meu portfolio - Lucas Bighi">
+	 <meta property="og:site_name" content="Meu portfolio - Lucas Bighi">
+	 <meta property="og:description" content="Desenvolvimento Mobile iOS, Java, Java Web, WEB Design">
+	 <meta property="og:image" content="https://lucasbighi.github.io/images/portfolio/portfolio-github.png">
+	 <meta property="og:image:type" content="image/png">
+	 <meta property="og:image:width" content="1600">
+	 <meta property="og:image:height" content="1600">
+	 <meta property="og:type" content="website">
 
    <!--- Basic Page Needs
    ================================================== -->
