--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="docs/CV.pdf" download="CV.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download .pdf</a>
+                     <a href="docs/Lucas Marques Bighi.pdf" download="Lucas Marques Bighi.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download .pdf</a>
                   </p>
                </div>
 
