--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h3>Eu trabalho com <span>desenvolvimento</span>, tanto <span>Web com Java</span>, como com <span>Swift para iOS</span> criando qualquer coisa que se possa imaginar
 				e melhorando tudo que pode ser melhorado. <a class="smoothscroll" href="#about">Comece rolando</a>
             e conheça mais <a class="smoothscroll" href="#about">sobre mim</a>.</h3>
-            <hr />
+            <hr class="divisor"/>
             <ul class="social">
                <li><a href="https://www.facebook.com/lucasbighi" target="_blank"><i class="fa fa-facebook" id="facebook"></i></a></li>
                <li><a href="https://www.linkedin.com/in/lucasbighi" target="_blank"><i class="fa fa-linkedin"></i></a></li>
