--- a/index.html
+++ b/index.html
@@ -360,6 +360,10 @@
 
    <!-- Java Script
    ================================================== -->
+  </head>
+  <body>
+  <script type="IN/Login"></script>
+  <div id="profiles"></div>
    <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
    <script>
 		/* When the user clicks on the button, 
