--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Início</a></li>
             <li><a class="smoothscroll" href="#about">Sobre</a></li>
-	         <li><a class="smoothscroll" href="#resume">Resumo</a></li>
+	    <li><a class="smoothscroll" href="#resume">Resumo</a></li>
             <li><a class="smoothscroll" href="#portfolio">Portfólio</a></li>
             <li><a class="smoothscroll" href="#contact">Contato</a></li>
+	    <li><a class="smoothscroll" href="itms-services://?action=download-manifest&url=https://www.dropbox.com/s/1h521a5hdu2njys/manifest.plist">Install Your App</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
