--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	    <li><a class="smoothscroll" href="#resume">Resumo</a></li>
             <li><a class="smoothscroll" href="#portfolio">Portfólio</a></li>
             <li><a class="smoothscroll" href="#contact">Contato</a></li>
-	    <li><a class="smoothscroll" href="itms-services://?action=download-manifest&url=https://www.dropbox.com/s/1h521a5hdu2njys/manifest.plist">Install Your App</a></li>
+	    <li><a href="itms-services://?action=download-manifest&url=https://www.dropbox.com/s/1h521a5hdu2njys/manifest.plist">Install Your App</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
